Added styles and lightbox to work, general style fixes for mobile. Mobile now inits with the shrunken header

--- a/index.jade
+++ b/index.jade
@@ -27,7 +27,7 @@ html
                                         each t in tech.associated
                                             span= t
 
-                    .mobile-only
+                    .mobile-only.expertise-mobile
                         each tech in locals.expertise
                             div.tech
                                 h4= tech.technology
