--- a/work.jade
+++ b/work.jade
@@ -27,4 +27,5 @@ html
                     .dst.side-project
         .footer
             include components/footer
+        include components/lightbox
     script(src='public/script/serve.js')
