--- a/public/style/employment.scss
+++ b/public/style/employment.scss
@@ -1,16 +1,27 @@
 @import "utils/dimensions";
 @import "utils/fonts";
-.desktop {
+.recent-employer {
+    font-size: 0;
+    h3 {
+        font-size: calc(1.2 * #{$rem});
+    }
+    p {
+        display: inline-block;
+        font-size: $rem;
+        width: 50%;
+        padding: 15px;
+        img {
+            width: 100%;
+            height: 325px;
+            padding: 10px;
+        }
+    }
+}
+.mobile {
     .recent-employer {
-        font-size: 0;
         p {
-            display: inline-block;
             font-size: $rem;
-            width: 50%;
-            img {
-                width: 100%;
-                height: 325px;
-            }
+            width: 90%;
         }
     }
 }
