Added contact information

--- a/index.jade
+++ b/index.jade
@@ -10,6 +10,12 @@ html
             .leftnav.desktop-only
                 include components/leftnav
             .main
+                .contact
+                    h3 Contact Me
+                    p You can reach me at &nbsp;
+                        a(href="mailto:longuskikirk@gmail.com") longuskikirk@gmail.com
+                        | &nbsp; or &nbsp;
+                        a(href="tel:9893720095") 989-372-0095
                 .expertise
                     h3 Expertise
                     table.expertise-table.sortable.searchable.selectable.desktop-only
