--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -15,3 +15,12 @@
         padding-left: 10px;
     }
 }
+
+h3 {
+    margin-bottom: 20px;
+    font-size: 34px;
+    color: $pg;
+    font-family: $display;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
