Changed footer font color

--- a/public/style/footer.scss
+++ b/public/style/footer.scss
@@ -12,5 +12,5 @@
     background: $white;
     border-top: solid $pg 1px;
     bottom: 0;
-    color: transparentize($font-gray, .5);
+    color: $font-gray;
 }
