--- a/public/style/leftnav.scss
+++ b/public/style/leftnav.scss
@@ -10,7 +10,7 @@
     background: $lnbg;
     border-right: solid $borg 1px;
 
-    div {
+    nav {
         a {
             display: block;
             width: 100%;
