--- a/public/style/header.scss
+++ b/public/style/header.scss
@@ -41,7 +41,7 @@
 }
 body.mobile {
     .header {
-        height: $hmh;
+        height: auto;
         h1 {
             font-size: 8em;
             display: block;
