Mobile style fixes

--- a/public/style/employment.scss
+++ b/public/style/employment.scss
@@ -19,8 +19,11 @@
 .mobile {
     .recent-employer {
         p {
-            font-size: $rem;
-            width: 90%;
+            width: 100%;
+            img {
+                height: auto;
+                width: 100%;
+            }
         }
     }
 }
