--- a/site-code.jade
+++ b/site-code.jade
@@ -189,7 +189,7 @@ html
                             | the big one was flexibility, which I needed for IE support, and since I was doing that one anyone I decided why not do the rest
                             | Autoprefixer helps with browser coverage, flexibility adds IE support for flex box via custom CSS properties,
                             | fontmagic retrieves the fonts you're currently enjoying and is a really impressive piece of software
-                            | which you can findnbsp;
+                            | which you can find&nbsp;
                             a(href="https://github.com/jonathantneal/postcss-font-magician") here.
                             | and finally CSSNano squishes it all together.
                         code
