Added DotSignal experience and Dead Simple Tables side project

--- a/public/style/lightbox.scss
+++ b/public/style/lightbox.scss
@@ -22,11 +22,16 @@ body.lightbox-up {
         display: block;
         margin: 0 auto;
     }
+    img.portrait {
+        width: auto;
+        height: 85vh;
+    }
 }
 .mobile {
     .lightbox {
         overflow: auto;
-        img {
+        img,
+        img.portrait {
             width: auto;
             height: 90vh;
         }
