--- a/work.jade
+++ b/work.jade
@@ -24,7 +24,19 @@ html
                         p to this
                             img(src='#{imgPath}/MPS/workflow.png')
                     .dotsignal.recent-employer
+                        h4 DotSignal Inc
+                        p At DotSignal I developed the mobile search app from scratch.
+                            img.portrait(src='#{imgPath}/DS/ds-app.png')
+                        p It was a single page rich web app for finding properties and connecting with agents.
+                            img.portrait(src='#{imgPath}/DS/ds-list.png')
+                        p I wrote the front and back ends on top of their data structure,
+                            img.portrait(src='#{imgPath}/DS/ds-detail.png')
+                        p and designed the experience to be consistent with their brand.
+                            img.portrait(src='#{imgPath}/DS/ds-location.png')
                     .dst.side-project
+                        h4 Dead Simple Tables
+                        p As a side project, I've been developing Dead Simple Tables or DST, which has been used on the home page for this application
+                            a(href="https://github.com/longooglite/Dead-Simple-Tables") You can view the project here.
         footer.footer
             include components/footer
         include components/lightbox
