--- a/public/style/employment.scss
+++ b/public/style/employment.scss
@@ -9,6 +9,7 @@
         display: inline-block;
         width: 50%;
         padding: 15px;
+        vertical-align: top;
         img {
             display: block;
             height: 325px;
