--- a/public/style/tech.scss
+++ b/public/style/tech.scss
@@ -2,6 +2,7 @@
 @import "utils/colors";
 .expertise {
     table {
+        margin-top: 20px;
         table-layout: fixed;
         width: 100%;
         border-collapse: collapse;
