--- a/components/header.jade
+++ b/components/header.jade
@@ -1,14 +1,4 @@
-h1= locals.title
-h2= locals.subtitle
-nav.topnav.mobile-only
-    .nav
-        a(href=locals.navLinks[0].href)= locals.navLinks[0].title
-    .nav
-        a(href=locals.navLinks[1].href)= locals.navLinks[1].title
-    .nav
-        a.more-link(href='#0') more...
-    .more-menu
-        each link, index in locals.navLinks
-            if index > 1
-                div.nav.more-hidden
-                    a(href=link.href)= link.title
+header.header
+    h1.header__title= locals.title
+    h2.header__subtitle= locals.subtitle
+    include ./topnav
