--- a/components/leftnav.jade
+++ b/components/leftnav.jade
@@ -1,3 +1,3 @@
-each link in locals.navLinks
-    nav.nav
-        a(href=link.href)= link.title
+nav.nav__wrapper.nav__wrapper--vertical.desktop-only
+    each link in locals.navLinks
+        a.nav__link.nav__link--vertical(href=link.href)= link.title
