--- a/public/style/footer.scss
+++ b/public/style/footer.scss
@@ -14,3 +14,9 @@
     bottom: 0;
     color: $font-gray;
 }
+body.mobile .footer__text {
+    font-size: 42px;
+}
+body.mobile .footer__text--optional {
+    display: none;
+}
