Dogfooding dead simple tables into the site

--- a/index.jade
+++ b/index.jade
@@ -41,4 +41,5 @@ html
                                         span= ass
         footer.footer
             include components/footer
+    script(src='https://cdn.rawgit.com/longooglite/Dead-Simple-Tables/master/dst.min.js')
     script(src='public/script/serve.js')
