--- a/site-code.jade
+++ b/site-code.jade
@@ -148,7 +148,8 @@ html
                             Some quick notes, there's a version out there that appends the class to the body, but not in the modularized version.
                             The mobile comparison uses == because 0, null, and undefined should all fail. If 0 and null were acceptable, I'd use ===
                         p The most JavaScript intensive portion is the expertise table, what with the sorting
-                            |and the hover states. In fact, I spun the table sorting off into a separate project, which you can see at&nbsp;
+                            | and the hover states. In fact, I spun the table sorting off into a separate project, which you can see at.
+                            | as of right now, Dead Simple Tables is dogfooded into this site.&nbsp;
                             a(href="https://github.com/longooglite/Dead-Simple-Tables") Dead Simple Tables
                     .build
                         h3 Build Process
