--- a/public/style/utils/dimensions.scss
+++ b/public/style/utils/dimensions.scss
@@ -1,12 +1,12 @@
-$leftnav-width: 13.5rem;
+$leftnav-width: 10.5rem;
 $lnw: $leftnav-width;
 $mobile-nav-height: 5.5rem;
 $mnh: $mobile-nav-height;
-$header-height: 10.8rem;
+$header-height: 8.5rem;
 $hh: $header-height;
-$header-mini-height: 4rem;
+$header-mini-height: 3.75rem;
 $hmh: $header-mini-height;
-$footer-height: 3.5rem;
+$footer-height: 2.5rem;
 $fh: $footer-height;
 $gutters: 9rem;
 $gutter-width: calc(100% - #{$gutters});
@@ -17,5 +17,5 @@ $wfih: $workflow-info-height;
 $border-radius: .4rem;
 $modal-max-height: 95%;
 $mmh: $modal-max-height;
-$leftnavpadding: 1rem 2rem;
+$leftnavpadding: .75rem 1.75rem;
 $lnp: $leftnavpadding;
