--- a/public/style/text.scss
+++ b/public/style/text.scss
@@ -8,7 +8,7 @@ p {
 }
 
 .mobile p {
-    font-size: 36px;
+    font-size: 2 * $rem;
 }
 
 pre {
@@ -18,12 +18,12 @@ pre {
 }
 
 .mobile pre {
-    font-size: 36px;
+    font-size: 2 * $rem;
 }
 
 h3 {
     margin-bottom: 20px;
-    font-size: 34px;
+    font-size: 2 * $rem;
     color: $pg;
     font-family: $display;
     text-transform: uppercase;
@@ -31,15 +31,15 @@ h3 {
 }
 
 .mobile h3 {
-    font-size: 68px;
+    font-size: 3.5 * $rem;
 }
 
 h4  {
-    font-size: 22px;
+    font-size: 1.25 * $rem;
     font-weight: 300;
     text-decoration: underline;
 }
 
 .mobile h4  {
-    font-size: 44px;
+    font-size: 2.5 * $rem;
 }
