--- a/public/style/header.scss
+++ b/public/style/header.scss
@@ -6,13 +6,13 @@
     @include fixedCenter();
     top: 0;
     z-index: 2;
-    height: $hh;
+    font-size: 2.25 * $rem;
+    height: 7.75 * $rem;
     width: $gutter-width;
     background: $white;
     font-family: $header;
     border-bottom: solid $pg 1px;
     white-space: nowrap;
-    font-size: 2.5 * $rem;
 }
 .header__title {
     color: $pg;
