--- a/site-code.jade
+++ b/site-code.jade
@@ -189,8 +189,8 @@ html
                             | Autoprefixer helps with browser coverage, flexibility adds IE support for flex box via custom CSS properties,
                             | fontmagic retrieves the fonts you're currently enjoying and is a really impressive piece of software
                             | which you can find&nbsp;
-                            a(href="https://github.com/jonathantneal/postcss-font-magician") here.
-                            | and finally CSSNano squishes it all together.
+                            a(href="https://github.com/jonathantneal/postcss-font-magician") here
+                            |, and finally CSSNano squishes it all together.
                         code
                             pre.
                                 gulp.task('postsass', function(){
