--- a/site-code.jade
+++ b/site-code.jade
@@ -183,8 +183,8 @@ html
                         h4 PostSass
                         p
                             | PostSass is the most involved task, it compiles and concatenates all of the scss
-                            | files, and then runs the resulting css file through a few PostCSS processors for additional functionality
-                            | the big one was flexibility, which I needed for IE support, and since I was doing that one anyone I decided why not do the rest
+                            | files, and then runs the resulting css file through a few PostCSS processors for additional functionality.
+                            | The big one was flexibility, which I needed for IE support, and since I was doing that one anyway, I decided why not do the rest.
                             | Autoprefixer helps with browser coverage, flexibility adds IE support for flex box via custom CSS properties,
                             | fontmagic retrieves the fonts you're currently enjoying and is a really impressive piece of software
                             | which you can find&nbsp;
