Added anchors to work examples

--- a/public/style/header.scss
+++ b/public/style/header.scss
@@ -55,3 +55,10 @@ body.mobile .header {
         text-align: center;
     }
 }
+
+.header__link {
+    text-decoration: none;
+    &:visited {
+        color: $pg;
+    }
+}
