--- a/work.jade
+++ b/work.jade
@@ -13,19 +13,19 @@ html
                 .recent-work
                     h3 Recent Work
                     .image-pair__list
-                        h4 Mountain Pass Solutions
+                        h4#mps Mountain Pass Solutions
                         + imagePair(imgPath, 'MPS/workflow_builder.png', 'At Mountain Pass, I developed rich, asynchronous web apps like the workflow builder')
                         + imagePair(imgPath, 'MPS/roster_closed.png', 'and the Roster data table')
                         + imagePair(imgPath, 'MPS/old_design.png', 'I also maintained and updated the existing design, from this')
                         + imagePair(imgPath, 'MPS/workflow.png', 'to this')
                     .image-pair__list
-                        h4 DotSignal Inc
+                        h4#dsi DotSignal Inc
                         + imagePair(imgPath, 'DS/ds-app.png', 'At DotSignal I developed the mobile search app from scratch.', true)
                         + imagePair(imgPath, 'DS/ds-list.png', 'It was a single page rich web app for finding properties and connecting with agents.', true)
                         + imagePair(imgPath, 'DS/ds-detail.png', 'I wrote the front and back ends on top of their data structure,', true)
                         + imagePair(imgPath, 'DS/ds-location.png', 'and designed the experience to be consistent with their brand.', true)
                     div
-                        h4 Dead Simple Tables
+                        h4#dst Dead Simple Tables
                         p As a side project, I've been developing Dead Simple Tables or DST, which has been used on the home page for this application
                             a(href="https://github.com/longooglite/Dead-Simple-Tables") You can view the project here.
         footer.footer
