--- a/components/header.jade
+++ b/components/header.jade
@@ -1,4 +1,5 @@
 header.header
-    h1.header__title= locals.title
+    h1.header__title
+        a.header__link(href="./")= locals.title
     h2.header__subtitle= locals.subtitle
     include ./topnav
