--- a/index.jade
+++ b/index.jade
@@ -40,5 +40,5 @@ html
                                         span.detail-list__detail= ass
         footer.footer
             include components/footer
-    script(src='https://cdn.rawgit.com/longooglite/Dead-Simple-Tables/master/dst.min.js')
+    script(src='public/script/sortableTables.js')
     script(src='public/script/serve.js')
