Switch to webpack

--- a/resume.jade
+++ b/resume.jade
@@ -29,6 +29,11 @@ html
                             h4 Experience
                             ul
                                 li
+                                    span.company  Deepfueld
+                                    span.type Software Engineer
+                                    span.subtype Front End | React
+                                    span.years 2017-Present
+                                li
                                     span.company  Mountain Pass Solutions
                                     span.type Web Developer
                                     span.subtype Front End
